# NOVA

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  REMOTE.md  docker-compose.gpu.yml  docker-compose.nova-only.yml  docker-compose.windows.yml  docker-compose.yml  doctor.command  nova.command  nova_auditoria.bat  nova_autostart.bat  pyproject.toml  run-nova.command  start_nova.bat
auditoria/: 01-revision.md  02-nuevos-equipos.md  03-seguridad.md  README.md
deploy/: README.md  smoke.sh  up.sh
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: audio.ts  camera.ts  config.ts  main.ts  modality.ts  style.css  types.ts  voice.ts  ws.ts
frontend/src/config/: config.ts
frontend/src/flow/: flow.ts
frontend/src/nova/: supernova.ts
frontend/src/screen/: screen.ts
prompts/: 01-esqueleto.md  02-modelos-real.md  03-conductor-real.md  04-percepcion-local.md  05-docker-asus.md  06-herramientas.md  07-grupo-nube.md  08-memoria.md  09-salidas-visual.md  10-reconocimiento-cierre.md  ROADMAP.md
scripts/: install_autostart.ps1  setup_firewall.ps1  setup_native.ps1  smoke_e2e.py  start_nova.ps1  supervise_nova.ps1  update_nova.ps1  ws_test.py
src/nova/: __init__.py  app.py  chat.py  cli.py  config_api.py  doctor.py  enroll.py  env.py  paths.py  run.py
src/nova/agents/: __init__.py  estrategia.py  memoria.py  pmo.py  respuestas_rapidas.py  sentinela.py  sub_agent.py
src/nova/config/: __init__.py  empresa.yaml  models.yaml  perception.yaml  prompts.yaml  teams.yaml  tools.yaml
src/nova/core/: __init__.py  agent.py  comprension.py  conductor.py  empresa.py  message_bus.py  proactivo.py  prompts.py  registry.py  security.py  task.py  trace.py  world_state.py
src/nova/logging/: __init__.py  registro.py
src/nova/memory/: __init__.py  embeddings.py  extractor.py  graph.py  obsidian.py  store.py
src/nova/models/: __init__.py  model_router.py
src/nova/output/: __init__.py  presentacion.py  voz.py
src/nova/perception/: __init__.py  audio.py  base.py  config.py  loop.py  text.py  vision.py
src/nova/recognition/: __init__.py  base.py  faces.py  presencia.py  voices.py
src/nova/tools/: __init__.py  base.py  calendario.py  clima.py  compras.py  correo.py  (+7 more)
tests/: conftest.py  test_app.py  test_clarification.py  test_comprension.py  test_confiabilidad.py  test_config_api.py  test_empresa.py  test_logging.py  test_mejoras.py  test_memory.py  test_models.py  test_perception.py  test_presentacion.py  test_providers.py  test_recognition.py  test_routing.py  test_security.py  test_smoke_e2e.py  test_tools.py  test_vision.py
(+5 files in other folders)
