[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nova"
version = "0.1.0"
description = "NOVA — asistente personal multiagente (esqueleto del núcleo)"
readme = "README.md"
# Desde Prompt 4 el target es Python 3.11+ (lo piden las libs de audio/video).
# El núcleo sigue escrito 3.8-compatible (`from __future__ import annotations`),
# así que no hay que tocar nada del código existente.
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
# Servicio web (FastAPI + WebSocket). Va en la imagen Docker; en dev se instala
# junto con [dev] para poder testear app.py sin levantar el servidor.
server = [
    "fastapi",
    "uvicorn[standard]",
]
# Stack de percepción (audio/video/voz). NO requerido para tests (se mockea) ni
# para `nova.chat`. Se importa de forma perezosa: si falta una lib, esa fuente
# se degrada con aviso y el resto sigue. Instalar con: pip install -e ".[perception]"
# (en macOS antes: brew install portaudio ffmpeg)
perception = [
    "numpy",
    "sounddevice",      # captura de micrófono (necesita portaudio)
    "faster-whisper",   # STT local (necesita ffmpeg)
    "silero-vad",       # VAD (detección de voz) — gating del STT
    "opencv-python",    # captura de cámara
    "piper-tts",        # TTS local (voz)
    "openwakeword",     # wake-word (placeholder 'hey_jarvis', off por defecto)
]

[tool.setuptools.packages.find]
where = ["src"]

# Incluye los YAML de config en el wheel (instalación NO editable, ej. Docker).
[tool.setuptools.package-data]
"nova.config" = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
